@@ -1,6 +1,8 @@
 Revision history for English::Script
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.02      2020-09-25 12:07:39-07:00 America/Los_Angeles
         - Add support for negative numbers
